# task-management-system

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  QUICK_EMAIL_SETUP.txt  README.md  conftest.py  coverage.xml  create_test_data.py  docker-compose.yml  env.example  factories.py  gunicorn_config.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_coverage.sh  setup.cfg  test_celery_real.py  test_celery_redis_connection.py  test_celery_task_execution.py  test_code_quality.sh  test_data_processing_tasks.py  test_docker_build.sh  test_email_manual.py  test_email_tasks.py  test_flower.py  test_gunicorn_config.py  test_gunicorn_docker.sh  test_health_checks.py  test_logging.py  test_nginx_config.sh  test_notification_tasks.py  test_profile_docker.sh  test_profile_endpoints.py  test_profile_manual.sh  test_pytest_setup.py  test_scheduled_tasks.py  test_send_real_email.py  (+3 more)
.github/workflows/: ci.yml
core/: admin.py  apps.py  jwt_views.py  logging_utils.py  models.py  permissions.py  signals.py  tests.py  views.py
core/migrations/: 0001_initial.py  0002_initial.py
nginx/: nginx.conf
notifications/: admin.py  models.py  serializers.py  tasks.py  tests.py  tests_tasks.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_initial.py
notifications/templates/notifications/emails/: base.html  daily_reminder.html  daily_reminder.txt  project_update.html  project_update.txt  task_assignment.html  task_assignment.txt  task_due_reminder.html  task_due_reminder.txt  weekly_digest.html  weekly_digest.txt  welcome.html  welcome.txt
projects/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  tests_tasks.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
taskmanager/: __init__.py  celery.py  settings.py  urls.py
tasks/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py
teams/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
teams/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
